Update global status container to be a div

--- a/tests/fixtures/new-comment-initialized.html
+++ b/tests/fixtures/new-comment-initialized.html
@@ -1,13 +1,13 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<p class="global-status">
-		A summary of the benchmark results will show here once they finish.
-	</p>
+	<div class="global-status">
+		<p>A summary of the benchmark results will show here once they finish.</p>
+	</div>
 	<div id="tachometer-reporter-action--summaries"></div>
 	<h3>Results</h3>
-	<p class="global-status">
-		The full results of your benchmarks will show here once they finish.
-	</p>
+	<div class="global-status">
+		<p>The full results of your benchmarks will show here once they finish.</p>
+	</div>
 	<div id="tachometer-reporter-action--results"></div>
 </div>
