--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<p class="global-status"></p>
+	<div class="global-status"></div>
 	<div id="tachometer-reporter-action--summaries">
 		<div data-sort-key="000-default">
 			<ul
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<h3>Results</h3>
-	<p class="global-status"></p>
+	<div class="global-status"></div>
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-report-id"
