--- a/tests/fixtures/multi-measure-names.html
+++ b/tests/fixtures/multi-measure-names.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<p class="global-status"></p>
+	<div class="global-status"></div>
 	<div id="tachometer-reporter-action--summaries">
 		<div data-sort-key="render">
 			<h4>render</h4>
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<h3>Results</h3>
-	<p class="global-status"></p>
+	<div class="global-status"></div>
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-multi-measure-names"
