--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -1,7 +1,11 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<div class="global-status"></div>
+	<div class="global-status">
+		<blockquote>
+			⏳ Benchmarks are currently running. Results below are out of date.
+		</blockquote>
+	</div>
 	<div id="tachometer-reporter-action--summaries">
 		<div data-sort-key="000-default">
 			<ul
@@ -30,7 +34,11 @@
 		</div>
 	</div>
 	<h3>Results</h3>
-	<div class="global-status"></div>
+	<div class="global-status">
+		<blockquote>
+			⏳ Benchmarks are currently running. Results below are out of date.
+		</blockquote>
+	</div>
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-report-id"
